--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/css/output.css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="flex items-center justify-end space-x-2">
+        <input type="checkbox" id="themeMode" class="peer/draft hidden" />
+        <span class="text-sm text-gray-800 dark:text-gray-500">Light</span>
+        <label
+          for="themeMode"
+          class="flex h-5 w-5 cursor-pointer items-center rounded-full bg-gray-300 p-1 peer-checked/draft:bg-sky-500"
+        >
+        </label>
+        <span class="text-sm text-gray-400 dark:text-gray-200">Dark</span>
+      </div>
+
+      <h1 class="heading-1">Heading-1</h1>
+      <h2 class="heading-2">Heading-2</h2>
+      <p class="xl-text">Text-1</p>
+      <p class="lg-text">Text-2</p>
+      <p class="md-text">Text-3</p>
+      <p class="sm-text">Text-4</p>
+    </div>
+
+    <script src="/src/js/script.js"></script>
+  </body>
 </html>
