--- a/src/index.html
+++ b/src/index.html
@@ -17,21 +17,21 @@
           <ul class="sm-text flex items-center gap-md">
             <li>
               <a
-                class="text-active border-accent transition-common inline-block border-b-2 font-bold"
+                class="text-active transition-common inline-block border-b-2 border-accent font-bold"
                 href="#home"
                 >Home</a
               >
             </li>
             <li>
               <a
-                class="hover:border-accent transition-common inline-block border-b-2 border-transparent"
+                class="transition-common inline-block border-b-2 border-transparent hover:border-accent"
                 href="#favorite"
                 >Favorite works</a
               >
             </li>
             <li>
               <a
-                class="hover:border-accent transition-common inline-block border-b-2 border-transparent"
+                class="transition-common inline-block border-b-2 border-transparent hover:border-accent"
                 href="#portfolio"
                 >Portfolio</a
               >
@@ -48,7 +48,7 @@
           />
           <label
             for="lightMode"
-            class="hover:border-accent transition-common peer-checked/light:text-active peer-checked/light:border-accent cursor-pointer border-b-2 border-transparent peer-checked/light:font-bold"
+            class="transition-common peer-checked/light:text-active cursor-pointer border-b-2 border-transparent hover:border-accent peer-checked/light:border-accent peer-checked/light:font-bold"
             >Light</label
           >
           <input
@@ -60,12 +60,150 @@
           />
           <label
             for="darkMode"
-            class="hover:border-accent transition-common peer-checked/dark:text-active peer-checked/dark:border-accent cursor-pointer border-b-2 border-transparent peer-checked/dark:font-bold"
+            class="transition-common peer-checked/dark:text-active cursor-pointer border-b-2 border-transparent hover:border-accent peer-checked/dark:border-accent peer-checked/dark:font-bold"
             >Dark</label
           >
         </div>
       </div>
     </header>
+
+    <footer class="mt-lg lg:mt-xl">
+      <div class="container">
+        <div class="flex flex-col justify-between gap-md pb-md md:flex-row">
+          <p class="lg-text lg:xl-text md:max-w-sm lg:max-w-md">
+            For me, photography is not just beautiful shots, it is an
+            opportunity to show your beauty and individuality.
+          </p>
+          <nav class="flex gap-md lg:gap-xl">
+            <ul class="flex flex-col gap-sm md:gap-md">
+              <li>
+                <a
+                  class="md-text lg:lg-text transition-common hover:text-accent"
+                  href="#home"
+                  >Home</a
+                >
+              </li>
+              <li>
+                <a
+                  class="md-text lg:lg-text transition-common hover:text-accent"
+                  href="#favorite"
+                  >Favorite works</a
+                >
+              </li>
+              <li>
+                <a
+                  class="md-text lg:lg-text transition-common hover:text-accent"
+                  href="#portfolio"
+                  >Portfolio</a
+                >
+              </li>
+            </ul>
+            <ul class="flex flex-col gap-sm md:gap-md">
+              <li>
+                <a
+                  class="md-text lg:lg-text transition-common hover:text-accent"
+                  href="https://www.facebook.com/"
+                  target="_blank"
+                  >Facebook</a
+                >
+              </li>
+              <li>
+                <a
+                  class="md-text lg:lg-text transition-common hover:text-accent"
+                  href="https://www.instagram.com/"
+                  target="_blank"
+                  >Instagram</a
+                >
+              </li>
+              <li>
+                <a
+                  class="md-text lg:lg-text transition-common hover:text-accent"
+                  href="https://www.youtube.com/"
+                  target="_blank"
+                  >YouTube</a
+                >
+              </li>
+              <li>
+                <a
+                  class="md-text lg:lg-text transition-common hover:text-accent"
+                  href="mailto:example@gmail.com"
+                  target="_blank"
+                  >Email</a
+                >
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div
+          class="flex flex-col items-center justify-between gap-sm border-t border-dark-gray py-md dark:border-light-gray md:flex-row md:gap-md"
+        >
+          <div class="flex items-center gap-md">
+            <a href="https://www.facebook.com/" target="_blank">
+              <svg
+                viewBox="0 0 16 32"
+                width="16"
+                height="32"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                class="transition-common fill-dark-gray hover:fill-accent dark:fill-light-gray hover:dark:fill-accent"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M10.9141 32V17.6H15.2859L16 11.2H10.9141V8.08281C10.9141 6.43481 10.9562 4.8 13.259 4.8H15.5915V0.224219C15.5915 0.155419 13.588 0 11.5611 0C7.32799 0 4.67744 2.65151 4.67744 7.52031V11.2H0V17.6H4.67744V32H10.9141Z"
+                />
+              </svg>
+            </a>
+            <a href="https://www.instagram.com/" target="_blank">
+              <svg
+                width="32"
+                height="32"
+                viewBox="0 0 32 32"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                class="transition-common fill-dark-gray hover:fill-accent dark:fill-light-gray hover:dark:fill-accent"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M16.5 24C21.1944 24 25 20.1944 25 15.5C25 10.8056 21.1944 7 16.5 7C11.8056 7 8 10.8056 8 15.5C8 20.1944 11.8056 24 16.5 24ZM16.5 21.1667C19.6296 21.1667 22.1667 18.6296 22.1667 15.5C22.1667 12.3704 19.6296 9.83333 16.5 9.83333C13.3704 9.83333 10.8333 12.3704 10.8333 15.5C10.8333 18.6296 13.3704 21.1667 16.5 21.1667Z"
+                />
+                <path
+                  d="M24.5 6C23.6716 6 23 6.67158 23 7.5C23 8.32842 23.6716 9 24.5 9C25.3284 9 26 8.32842 26 7.5C26 6.67158 25.3284 6 24.5 6Z"
+                />
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M0.951215 4.76518C0 6.63204 0 9.07591 0 13.9636V18.0364C0 22.9241 0 25.368 0.951215 27.2348C1.78793 28.8769 3.12303 30.2121 4.76518 31.0487C6.63204 32 9.07591 32 13.9636 32H18.0364C22.9241 32 25.368 32 27.2348 31.0487C28.8769 30.2121 30.2121 28.8769 31.0487 27.2348C32 25.368 32 22.9241 32 18.0364V13.9636C32 9.07591 32 6.63204 31.0487 4.76518C30.2121 3.12303 28.8769 1.78793 27.2348 0.951215C25.368 0 22.9241 0 18.0364 0H13.9636C9.07591 0 6.63204 0 4.76518 0.951215C3.12303 1.78793 1.78793 3.12303 0.951215 4.76518ZM18.0364 2.90909H13.9636C11.4718 2.90909 9.77782 2.91136 8.46848 3.01833C7.19308 3.12253 6.54086 3.3114 6.08588 3.54323C4.99111 4.10105 4.10105 4.99111 3.54323 6.08588C3.3114 6.54086 3.12253 7.19308 3.01833 8.46848C2.91136 9.77782 2.90909 11.4718 2.90909 13.9636V18.0364C2.90909 20.5283 2.91136 22.2221 3.01833 23.5315C3.12253 24.807 3.3114 25.4592 3.54323 25.9142C4.10105 27.0089 4.99111 27.8989 6.08588 28.4567C6.54086 28.6886 7.19308 28.8775 8.46848 28.9817C9.77782 29.0886 11.4718 29.0909 13.9636 29.0909H18.0364C20.5283 29.0909 22.2221 29.0886 23.5315 28.9817C24.807 28.8775 25.4592 28.6886 25.9142 28.4567C27.0089 27.8989 27.8989 27.0089 28.4567 25.9142C28.6886 25.4592 28.8775 24.807 28.9817 23.5315C29.0886 22.2221 29.0909 20.5283 29.0909 18.0364V13.9636C29.0909 11.4718 29.0886 9.77782 28.9817 8.46848C28.8775 7.19308 28.6886 6.54086 28.4567 6.08588C27.8989 4.99111 27.0089 4.10105 25.9142 3.54323C25.4592 3.3114 24.807 3.12253 23.5315 3.01833C22.2221 2.91136 20.5283 2.90909 18.0364 2.90909Z"
+                />
+              </svg>
+            </a>
+            <a href="https://www.youtube.com/" target="_blank">
+              <svg
+                width="43"
+                height="32"
+                viewBox="0 0 43 32"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                class="transition-common fill-dark-gray hover:fill-accent dark:fill-light-gray hover:dark:fill-accent"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M17.6598 7.23717C17.1096 6.91882 16.4336 6.9211 15.8855 7.24316C15.3374 7.56522 15 8.15835 15 8.8V23.2C15 23.8417 15.3374 24.4348 15.8855 24.7569C16.4336 25.0789 17.1096 25.0812 17.6598 24.7628L30.1042 17.5628C30.6581 17.2424 31 16.646 31 16C31 15.354 30.6581 14.7577 30.1042 14.4373L17.6598 7.23717ZM25.6389 16L18.5556 20.0983V11.9017L25.6389 16Z"
+                />
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M0 16C0 9.33381 0 6.00071 1.71089 3.66412C2.26343 2.90951 2.93224 2.24588 3.69275 1.69762C6.04759 1.05964e-07 9.40673 0 16.125 0H26.875C33.5932 0 36.9524 1.05964e-07 39.3072 1.69762C40.0678 2.24588 40.7366 2.90951 41.2891 3.66412C43 6.00071 43 9.33381 43 16C43 22.6661 43 25.9993 41.2891 28.3358C40.7366 29.0905 40.0678 29.7541 39.3072 30.3024C36.9524 32 33.5932 32 26.875 32H16.125C9.40673 32 6.04759 32 3.69275 30.3024C2.93224 29.7541 2.26343 29.0905 1.71089 28.3358C0 25.9993 0 22.6661 0 16ZM16.125 3.55556H26.875C30.3139 3.55556 32.6053 3.56044 34.3414 3.74708C36.0105 3.92651 36.7363 4.23908 37.2011 4.57413C37.6572 4.90309 38.0586 5.30126 38.3902 5.75403C38.7278 6.2152 39.0427 6.93534 39.2237 8.59145C39.4118 10.3141 39.4167 12.5877 39.4167 16C39.4167 19.4123 39.4118 21.6859 39.2237 23.4085C39.0427 25.0647 38.7278 25.7849 38.3902 26.246C38.0586 26.6987 37.6572 27.0969 37.2011 27.426C36.7363 27.7609 36.0105 28.0734 34.3414 28.253C32.6053 28.4396 30.3139 28.4444 26.875 28.4444H16.125C12.686 28.4444 10.3947 28.4396 8.65857 28.253C6.98952 28.0734 6.26376 27.7609 5.79898 27.426C5.34268 27.0969 4.9414 26.6987 4.60987 26.246C4.27219 25.7849 3.95718 25.0647 3.77635 23.4085C3.58826 21.6859 3.58333 19.4123 3.58333 16C3.58333 12.5877 3.58826 10.3141 3.77635 8.59145C3.95718 6.93534 4.27219 6.2152 4.60987 5.75403C4.9414 5.30126 5.34268 4.90309 5.79898 4.57413C6.26376 4.23908 6.98952 3.92651 8.65857 3.74708C10.3947 3.56044 12.686 3.55556 16.125 3.55556Z"
+                />
+              </svg>
+            </a>
+          </div>
+          <p class="md-text md:lg-text">Copyright 2023 Laura</p>
+        </div>
+      </div>
+    </footer>
 
     <script src="/src/js/script.js"></script>
   </body>
