--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,42 @@
       </div>
     </header>
 
+    <section class="section-common" id="home">
+      <div class="container">
+        <h1 class="heading-1">We will create a photo story with you</h1>
+      </div>
+    </section>
+
+    <section class="section-common" id="favorite">
+      <div class="container">
+        <h2 class="heading-2">Favorite works</h2>
+      </div>
+    </section>
+
+    <section class="section-common">
+      <div class="container">
+        <h2 class="heading-2">Let's create history</h2>
+      </div>
+    </section>
+
+    <section class="section-common" id="portfolio">
+      <div class="container">
+        <h2 class="heading-2">Portfolio</h2>
+      </div>
+    </section>
+
+    <section class="section-common">
+      <div class="container">
+        <h2 class="heading-2">FAQ</h2>
+      </div>
+    </section>
+
+    <section class="section-common">
+      <div class="container">
+        <h2 class="heading-2">Contact me</h2>
+      </div>
+    </section>
+
     <footer class="mt-lg lg:mt-xl">
       <div class="container">
         <div class="flex flex-col justify-between gap-md pb-md md:flex-row">
