--- a/src/index.html
+++ b/src/index.html
@@ -94,6 +94,30 @@
     <section class="section-common">
       <div class="container">
         <h2 class="heading-2">FAQ</h2>
+        <label class="lg-text mt-md block cursor-pointer md:mt-lg">
+          <input type="checkbox" class="peer/faq hidden" />
+          <p class="arrow-before relative pl-lg dark:text-white">
+            How long does filming take?
+          </p>
+          <p
+            class="md-text md:lg-text hidden pt-sm peer-checked/faq:block md:pt-md"
+          >
+            The duration of the filming process depends on the customer’s
+            specifications and is agreed upon individually.
+          </p>
+        </label>
+        <label class="lg-text mt-md block cursor-pointer md:mt-lg">
+          <input type="checkbox" class="peer/faq hidden" />
+          <p class="arrow-before relative pl-lg dark:text-white">
+            What equipment do I use?
+          </p>
+          <p
+            class="md-text md:lg-text hidden pt-sm peer-checked/faq:block md:pt-md"
+          >
+            The duration of the filming process depends on the customer’s
+            specifications and is agreed upon individually.
+          </p>
+        </label>
       </div>
     </section>
 
