--- a/src/index.html
+++ b/src/index.html
@@ -79,9 +79,121 @@
       </div>
     </section>
 
-    <section class="section-common">
+    <section class="section-common relative">
+      <span
+        class="absolute bottom-0 top-0 m-auto h-14 w-full bg-gradient blur-[200px] dark:blur-[150px]"
+      ></span>
       <div class="container">
-        <h2 class="heading-2">Let's create history</h2>
+        <h2 class="heading-2 text-center">Let's create history</h2>
+        <p class="md-text md:lg-text mt-md text-center">
+          Save not only the moment, the place, but also the aroma and
+          sensations.
+        </p>
+        <div
+          class="mt-md flex flex-wrap items-start justify-around gap-y-md text-center md:mt-lg md:flex-nowrap md:gap-md"
+        >
+          <div
+            class="md-text flex w-1/2 flex-col items-center justify-center gap-sm dark:text-white md:w-full md:gap-md"
+          >
+            <div
+              class="md:w-2xl md:h-2xl custom-shadow dark:custom-shadow_dark flex h-28 w-28 items-center justify-center rounded-3xl bg-white/10 backdrop-blur-2xl"
+            >
+              <svg
+                width="56"
+                height="60"
+                class="fill-dark-gray dark:fill-light-gray"
+                viewBox="0 0 56 60"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M38.5708 24.387C39.2542 23.6566 39.2542 22.4726 38.5708 21.7422C37.8873 21.0119 36.7793 21.0119 36.0959 21.7422L25.6667 32.8872L21.0708 27.9759C20.3873 27.2456 19.2793 27.2456 18.5959 27.9759C17.9125 28.7062 17.9125 29.8903 18.5959 30.6206L24.4292 36.8543C25.1126 37.5846 26.2207 37.5846 26.9041 36.8543L38.5708 24.387Z"
+                />
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M29.2597 1.58742C28.4409 1.30363 27.5591 1.30362 26.7403 1.58742L7.49026 8.25913C5.80876 8.84191 4.66666 10.5138 4.66666 12.4073V24.9347C4.66667 40.3676 13.4652 51.627 26.6023 56.9242C27.5022 57.2871 28.4978 57.2871 29.3977 56.9242C42.5348 51.627 51.3333 40.3676 51.3333 24.9347V12.408C51.3333 10.5152 50.1918 8.84211 48.5097 8.25913L29.2597 1.58742ZM27.82 5.14518C27.937 5.10464 28.063 5.10464 28.1799 5.14518L47.43 11.8169C47.6719 11.9007 47.8333 12.1395 47.8333 12.408V24.9347C47.8333 38.5524 40.1782 48.5796 28.162 53.4248C28.0585 53.4666 27.9414 53.4666 27.8379 53.4248C15.8217 48.5796 8.16667 38.5524 8.16666 24.9347L8.16666 12.4073C8.16666 12.1394 8.32755 11.9009 8.57003 11.8169L27.82 5.14518Z"
+                />
+              </svg>
+            </div>
+            <p>Get high-quality photos</p>
+          </div>
+          <div
+            class="md-text flex w-1/2 flex-col items-center justify-center gap-sm dark:text-white md:w-full md:gap-md"
+          >
+            <div
+              class="md:w-2xl md:h-2xl custom-shadow dark:custom-shadow_dark flex h-28 w-28 items-center justify-center rounded-3xl bg-white/10 backdrop-blur-2xl"
+            >
+              <svg
+                width="56"
+                height="60"
+                class="fill-dark-gray dark:fill-light-gray"
+                viewBox="0 0 56 60"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M6.41671 4.98694C4.16154 4.98694 2.33337 6.94058 2.33337 9.35051V18.0777C2.33337 20.4876 4.16154 22.4412 6.41671 22.4412H49.5834C51.8385 22.4412 53.6667 20.4876 53.6667 18.0777V9.35051C53.6667 6.94058 51.8385 4.98694 49.5834 4.98694H6.41671ZM49.5834 8.72714H6.41671C6.09454 8.72714 5.83337 9.00623 5.83337 9.35051V18.0777C5.83337 18.4219 6.09454 18.701 6.41671 18.701H49.5834C49.9055 18.701 50.1667 18.4219 50.1667 18.0777V9.35051C50.1667 9.00623 49.9055 8.72714 49.5834 8.72714Z"
+                />
+                <path
+                  d="M6.41671 24.9347C7.38321 24.9347 8.16671 25.772 8.16671 26.8048V50.4928C8.16671 50.837 8.42788 51.1161 8.75004 51.1161H47.25C47.5722 51.1161 47.8334 50.837 47.8334 50.4928V26.8048C47.8334 25.772 48.6169 24.9347 49.5834 24.9347C50.5499 24.9347 51.3334 25.772 51.3334 26.8048V50.4928C51.3334 52.9027 49.5052 54.8563 47.25 54.8563H8.75004C6.49488 54.8563 4.66671 52.9027 4.66671 50.4928V26.8048C4.66671 25.772 5.45021 24.9347 6.41671 24.9347Z"
+                />
+                <path
+                  d="M22.75 28.6749C21.7835 28.6749 21 29.5122 21 30.545C21 31.5778 21.7835 32.4151 22.75 32.4151H33.25C34.2165 32.4151 35 31.5778 35 30.545C35 29.5122 34.2165 28.6749 33.25 28.6749H22.75Z"
+                />
+              </svg>
+            </div>
+            <p>All sources will be archived</p>
+          </div>
+          <div
+            class="md-text flex w-1/2 flex-col items-center justify-center gap-sm dark:text-white md:w-full md:gap-md"
+          >
+            <div
+              class="md:w-2xl md:h-2xl custom-shadow dark:custom-shadow_dark flex h-28 w-28 items-center justify-center rounded-3xl bg-white/10 backdrop-blur-2xl"
+            >
+              <svg
+                width="56"
+                height="60"
+                class="fill-dark-gray dark:fill-light-gray"
+                viewBox="0 0 56 60"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M5.24996 9.97388C4.92779 9.97388 4.66663 10.253 4.66663 10.5972V49.246C4.66663 49.5903 4.92779 49.8694 5.24996 49.8694H12.6654L32.6657 27.3715C34.2472 25.5925 36.8899 25.5563 38.5135 27.2914L51.3333 40.991V10.5972C51.3333 10.253 51.0721 9.97388 50.75 9.97388H5.24996ZM13.4072 53.6096H13.4255H50.75C53.0051 53.6096 54.8333 51.656 54.8333 49.246V45.5106V45.501V10.5972C54.8333 8.18731 53.0051 6.23367 50.75 6.23367H5.24996C2.9948 6.23367 1.16663 8.18731 1.16663 10.5972V49.246C1.16663 51.656 2.9948 53.6096 5.24996 53.6096H13.4072ZM51.3333 49.246V46.2805L36.0386 29.9361C35.8067 29.6883 35.4291 29.6934 35.2032 29.9476L17.4929 49.8694H50.75C51.0721 49.8694 51.3333 49.5903 51.3333 49.246ZM21 23.0646C21 25.4745 19.1718 27.4282 16.9166 27.4282C14.6615 27.4282 12.8333 25.4745 12.8333 23.0646C12.8333 20.6547 14.6615 18.701 16.9166 18.701C19.1718 18.701 21 20.6547 21 23.0646ZM24.5 23.0646C24.5 27.5402 21.1048 31.1684 16.9166 31.1684C12.7285 31.1684 9.33329 27.5402 9.33329 23.0646C9.33329 18.589 12.7285 14.9608 16.9166 14.9608C21.1048 14.9608 24.5 18.589 24.5 23.0646Z"
+                />
+              </svg>
+            </div>
+            <p>Minimum 30 edited photos</p>
+          </div>
+          <div
+            class="md-text flex w-1/2 flex-col items-center justify-center gap-sm dark:text-white md:w-full md:gap-md"
+          >
+            <div
+              class="md:w-2xl md:h-2xl custom-shadow dark:custom-shadow_dark flex h-28 w-28 items-center justify-center rounded-3xl bg-white/10 backdrop-blur-2xl"
+            >
+              <svg
+                width="56"
+                height="60"
+                class="fill-dark-gray dark:fill-light-gray"
+                viewBox="0 0 56 60"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M47.4169 1.87012C41.0223 1.87012 34.8692 4.47995 30.2152 9.16619L27.1713 12.2311C25.914 13.4971 24.7138 14.8242 23.5743 16.2079H11.8211C10.3868 16.2079 9.05764 17.0121 8.31968 18.3264L1.99939 29.5832C1.7082 30.1018 1.6697 30.7389 1.89605 31.2932C2.1224 31.8476 2.58565 32.2507 3.13948 32.3753L13.8068 34.7752C13.897 34.898 13.9969 35.0148 14.1062 35.1245L18.7635 39.7951L23.1314 44.769C23.2341 44.886 23.3435 44.9927 23.4585 45.0892L25.7042 56.4886C25.8208 57.0805 26.1981 57.5755 26.7168 57.8174C27.2355 58.0593 27.8317 58.0182 28.317 57.707L38.8509 50.9529C40.0808 50.1643 40.8333 48.744 40.8333 47.2112V34.6505C42.1287 33.4321 43.3711 32.1488 44.5562 30.8044L47.4217 27.5539C51.8076 22.5787 54.2492 16.001 54.2474 9.16591L54.2466 6.23241C54.2459 3.82297 52.4179 1.87012 50.1632 1.87012H47.4169ZM37.3333 37.6818C36.5571 38.3 35.7655 38.8966 34.9591 39.4711L27.0398 45.1129L28.623 53.149L37.0501 47.7457C37.2258 47.6331 37.3333 47.4302 37.3333 47.2112V37.6818ZM13.7844 30.948L19.0656 22.4825C19.6026 21.6217 20.1603 20.7767 20.738 19.9481H11.8211C11.6162 19.9481 11.4263 20.063 11.3209 20.2507L6.26464 29.2562L13.7844 30.948ZM32.6154 11.8883C36.62 7.85599 41.9146 5.61032 47.4169 5.61032H50.1632C50.4853 5.61032 50.7465 5.8893 50.7466 6.23351L50.7474 9.16701C50.749 15.0484 48.648 20.7083 44.8741 24.9892L42.0086 28.2398C39.3094 31.3017 36.293 34.0256 33.0176 36.359L25.3456 41.8247L21.2777 37.1924C21.2523 37.1635 21.2261 37.1355 21.1991 37.1084L16.8615 32.7584L21.9778 24.5572C24.1603 21.0587 26.7079 17.8367 29.5715 14.9533L32.6154 11.8883ZM40.8333 19.9478C40.8333 22.0134 39.2663 23.688 37.3333 23.688C35.4003 23.688 33.8333 22.0134 33.8333 19.9478C33.8333 17.8821 35.4003 16.2076 37.3333 16.2076C39.2663 16.2076 40.8333 17.8821 40.8333 19.9478ZM15.1666 52.3629C17.2662 50.1192 17.2663 45.8796 15.1667 43.6359C13.0671 41.3921 9.09958 41.3921 6.99995 43.6358C4.17943 46.6499 3.62831 53.3634 3.52372 55.4629C3.5062 55.8145 3.77002 56.0964 4.09907 56.0777C6.0638 55.9658 12.3466 55.3765 15.1666 52.3629Z"
+                />
+              </svg>
+            </div>
+            <p>Quickly and efficiently</p>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -91,32 +203,65 @@
       </div>
     </section>
 
-    <section class="section-common">
+    <section class="section-common relative">
+      <span
+        class="absolute bottom-0 top-0 m-auto h-14 w-full bg-gradient blur-[200px] dark:blur-[150px]"
+      ></span>
       <div class="container">
         <h2 class="heading-2">FAQ</h2>
-        <label class="lg-text mt-md block cursor-pointer md:mt-lg">
+        <label class="md:lg-text mt-md block cursor-pointer text-xl md:mt-lg">
           <input type="checkbox" class="peer/faq hidden" />
           <p class="arrow-before relative pl-lg dark:text-white">
-            How long does filming take?
+            This is our first time at a photo shoot. Can you tell me how to
+            pose, where to look?
           </p>
-          <p
+          <div
             class="md-text md:lg-text hidden pt-sm peer-checked/faq:block md:pt-md"
           >
-            The duration of the filming process depends on the customer’s
-            specifications and is agreed upon individually.
-          </p>
+            <p>
+              Yes, of course, I always help with posing and suggest how best to
+              stand and where to look. I also always have a casual conversation
+              during the shoot so that you don’t feel constrained - because this
+              will be reflected in the photographs.
+            </p>
+          </div>
         </label>
-        <label class="lg-text mt-md block cursor-pointer md:mt-lg">
+        <label class="md:lg-text mt-md block cursor-pointer text-xl md:mt-lg">
           <input type="checkbox" class="peer/faq hidden" />
           <p class="arrow-before relative pl-lg dark:text-white">
-            What equipment do I use?
+            How long in advance do I need to sign up for a shoot?
           </p>
-          <p
+          <div
             class="md-text md:lg-text hidden pt-sm peer-checked/faq:block md:pt-md"
           >
-            The duration of the filming process depends on the customer’s
-            specifications and is agreed upon individually.
+            <p>
+              The earlier you sign up, the more likely it is that the time you
+              need will be available. Sometimes people sign up even for today,
+              but the optimal period is two weeks in advance.
+            </p>
+          </div>
+        </label>
+        <label class="md:lg-text mt-md block cursor-pointer text-xl md:mt-lg">
+          <input type="checkbox" class="peer/faq hidden" />
+          <p class="arrow-before relative pl-lg dark:text-white">
+            Do you print photos?
           </p>
+          <div
+            class="md-text md:lg-text hidden pt-sm peer-checked/faq:block md:pt-md"
+          >
+            <p>
+              Yes, but photo printing is not included in the cost of photo
+              sessions and is paid separately:
+            </p>
+            <ul class="ml-5 list-disc md:ml-6">
+              <li>10x15 centimeters (glossy paper)</li>
+              <li>A4 (21x29.7 centimeters, glossy paper)</li>
+            </ul>
+            <p>
+              Photo printing services are provided only in conjunction with
+              photography services!
+            </p>
+          </div>
         </label>
       </div>
     </section>
