--- a/src/index.html
+++ b/src/index.html
@@ -1679,7 +1679,7 @@
             </nav>
           </div>
           <div
-            class="border-dark-gray-2 flex flex-col items-center justify-between gap-3 border-t py-8 dark:border-light-gray md:flex-row md:gap-8"
+            class="flex flex-col items-center justify-between gap-3 border-t border-dark-gray-2 py-8 dark:border-light-gray md:flex-row md:gap-8"
           >
             <div class="flex items-center gap-8">
               <a
@@ -1764,10 +1764,3 @@
     <script src="/src/js/script.js"></script>
   </body>
 </html>
-
-<!-- 
-Минимизировать
-Выложить на гит пэйджес
-Проверить на мобе
-Пересмотреть колонки
--->
